tests/failed/01-repr-failed.stderr
error: conflicting representation hints
 --> tests/failed/01-repr-failed.rs:4:13
  |
4 | #[repr(i32, i64)]
  |             ^^^

error: unsupported expression. It only supports integer literal
  --> tests/failed/01-repr-failed.rs:17:23
   |
17 | enum UnsizeRepr { A = -1 }
   |                       ^

error[E0692]: transparent struct cannot have other repr hints
 --> tests/failed/01-repr-failed.rs:8:8
  |
8 | #[repr(C, transparent)]
  |        ^  ^^^^^^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> tests/failed/01-repr-failed.rs:12:8
   |
12 | #[repr(transparent, transparent)]
   |        ^^^^^^^^^^^  ^^^^^^^^^^^
